--- a/app/views/haberes/liquidacionEmbargos/liquidacionEmbargosDetalles/indexLiquidacionEmbargoDetalle.scala.html
+++ b/app/views/haberes/liquidacionEmbargos/liquidacionEmbargosDetalles/indexLiquidacionEmbargoDetalle.scala.html
@@ -14,6 +14,7 @@
 		<thead>
 			<tr>
 				<th class="accion-editar">#</th>
+				<th>Concepto</th>
 				<th>Importe</th>
 				<th style="text-align: center;">Periodo</th>
 				<th style="text-align: center;">Tipo Liquidacion</th>
