--- a/app/views/haberes/liquidacionEmbargos/indexLiquidacionEmbargo.scala.html
+++ b/app/views/haberes/liquidacionEmbargos/indexLiquidacionEmbargo.scala.html
@@ -45,6 +45,7 @@
 		    	<span class="caret"></span>
 		  	</button>
 			<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+				<li role="presentation"><a data-title="Datos Retenciones"  href="#" role="menuitem" tabindex="-1" data-url="@controllers.haberes.routes.LiquidacionEmbargosController.reporteDetalle()" id="modalDetalle">Datos Detalles</a></li>
 
 			</ul>
 		</div>
