--- a/app/views/haberes/liquidacionEmbargos/indexLiquidacionEmbargo.scala.html
+++ b/app/views/haberes/liquidacionEmbargos/indexLiquidacionEmbargo.scala.html
@@ -57,7 +57,8 @@
 		    	<span class="caret"></span>
 		  	</button>
 			<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-				<li role="presentation"><a role="menuitem" id="accionCargarDetalleMasivo" tabindex="-1" href="#" data-url="@controllers.haberes.routes.LiquidacionEmbargosController.modalCargarDetalleMasivo()">Cargar Detalles</a></li>
+				<li role="presentation"><a data-title="Datos Retenciones"  href="#" role="menuitem" tabindex="-1" data-url="@controllers.haberes.routes.LiquidacionEmbargosController.crearLineaLiquidacion()" id="modalcrearLineaLiquidacion">Cargar Liquidaciones Detalles</a></li>
+				<!-- <li role="presentation"><a role="menuitem" id="accionCargarDetalleMasivo" tabindex="-1" href="#" data-url="@controllers.haberes.routes.LiquidacionEmbargosController.modalCargarDetalleMasivo()">Cargar Detalles</a></li> -->
 			</ul>
 		</div>
 
