--- a/app/views/haberes/liquidacionEmbargos/formLiquidacionEmbargo.scala.html
+++ b/app/views/haberes/liquidacionEmbargos/formLiquidacionEmbargo.scala.html
@@ -1,4 +1,4 @@
-@(baseForm: Form[models.haberes.LiquidacionEmbargo])
+@(baseForm: Form[models.haberes.LiquidacionEmbargo],formularioEditar: Boolean)
 @import helper._
 @import utils._
 @import models.auth._
@@ -21,47 +21,69 @@ $( function(){ $('.searchModal').modalSearch();})
 	@inputText(baseForm("id"), 'type -> "hidden", 'id -> "liquidacionEmbargoId")
 	<div class="row">
 		<div class="col-sm-4">
-			<label for="puestoLaboral" class="control-label">Puesto Laboral</label>
-			<div class="input-group @if(baseForm.error("puesto_laboral_id") != null) {has-error}else{has-required}">
-				@inputText(baseForm("puestoLaboral.legajo.agente.apellido"),'class -> "form-control", 'id -> "puesto_laboral")
-				@inputText(baseForm("puesto_laboral_id"),'hidden -> "hidden", 'id -> "puesto_laboral_id")
-				<span class="input-group-addon"><a href="#" class="searchModal" id="searchPuestoLaboral"
-															data-title="Selección de Puesto Laboral"
-															data-url="@controllers.haberes.routes.PuestosLaboralesController.modalBuscar()"
-															data-height="650"
-															data-width="700"
-															data-listen="modal.seleccion.puestoLaboral.simple"
-															data-label="#puesto_laboral"
-															data-field="#puesto_laboral_id">
-															<i class="glyphicon glyphicon-search"></i></a></span>
-			</div>
-			@baseForm("puesto_laboral_id").error.map{ error =>
-				<div class="text-error">@error.message</div>
-			}
+				<div class="form-group @if(baseForm.error("puesto_laboral_id") != null) {has-error}else{has-required}">
+					<label for="puestoLaboral" class="control-label">Puesto Laboral</label>
+
+					<div class="input-group">
+						@if(formularioEditar){
+							@inputText(baseForm("puestoLaboral.legajo.agente.apellido"),'class -> "form-control", 'id -> "puesto_laboral")
+							@inputText(baseForm("puesto_laboral_id"),'hidden -> "hidden", 'id -> "puesto_laboral_id")
+							<span class="input-group-addon"><a href="#" class="searchModal" id="searchPuestoLaboral"
+																		data-title="Selección de Puesto Laboral"
+																		data-url="@controllers.haberes.routes.PuestosLaboralesController.modalBuscar()"
+																		data-height="650"
+																		data-width="700"
+																		data-listen="modal.seleccion.puestoLaboral.simple"
+																		data-label="#puesto_laboral"
+																		data-field="#puesto_laboral_id">
+																		<i class="glyphicon glyphicon-search"></i></a></span>
+
+						}else{
+							@inputText(baseForm("puestoLaboral.legajo.agente.apellido"),'class -> "form-control", 'id -> "puesto_laboral",'readOnly -> "readOnly")
+							@inputText(baseForm("puesto_laboral_id"),'hidden -> "hidden", 'id -> "puesto_laboral_id")
+							<span class="input-group-addon"></span>
+						}
+
+
+					</div>
+					@baseForm("puesto_laboral_id").error.map{ error =>
+						<div class="text-error">@error.message</div>
+					}
+				</div>
 		</div>
 		<div class="col-sm-4">
 			<div class="form-group @if(baseForm.error("proveedor_id") != null) {has-error}else{has-required}">
 				<label for="inputProveedor" class="control-label">Contraparte</label>
-				<div class="input-group">
-				@inputText(baseForm("proveedor.nombre"), 'class -> "form-control", 'id -> "proveedor")
-				@inputText(baseForm("proveedor_id"), 'hidden -> "hidden", 'id -> "proveedor_id")
-				<span class="input-group-addon">
-					<a href="#" class="searchModal"
-								id="searchProveedor"
-								data-title="Selección de Proveedores"
-								data-url="@controllers.compras.routes.ProveedoresController.modalBuscar()"
-								data-height="650"
-								data-width="700"
-								data-listen="modal.seleccion.proveedor.simple"
-								data-label="#proveedor"
-								data-field="#proveedor_id">
-						<i class="glyphicon glyphicon-search"></i>
-					</a>
-				</span>
-				</div>
-				@baseForm("proveedor_id").error.map{ error =>
-					<div class="text-error">@error.message</div>
-			 	}
+
+					<div class="input-group">
+						@if(formularioEditar){
+							@inputText(baseForm("proveedor.nombre"), 'class -> "form-control", 'id -> "proveedor")
+							@inputText(baseForm("proveedor_id"), 'hidden -> "hidden", 'id -> "proveedor_id")
+						<span class="input-group-addon">
+							<a href="#" class="searchModal"
+										id="searchProveedor"
+										data-title="Selección de Proveedores"
+										data-url="@controllers.compras.routes.ProveedoresController.modalBuscar()"
+										data-height="650"
+										data-width="700"
+										data-listen="modal.seleccion.proveedor.simple"
+										data-label="#proveedor"
+										data-field="#proveedor_id">
+								<i class="glyphicon glyphicon-search"></i>
+							</a>
+						</span>
+						}else{
+							@inputText(baseForm("proveedor.nombre"), 'class -> "form-control", 'id -> "proveedor",'readOnly -> "readOnly")
+							@inputText(baseForm("proveedor_id"), 'hidden -> "hidden", 'id -> "proveedor_id")
+							<span class="input-group-addon"></span>
+						}
+
+
+					</div>
+					@baseForm("proveedor_id").error.map{ error =>
+						<div class="text-error">@error.message</div>
+				 	}
+
 			</div>
 		</div>
 	</div>
@@ -69,7 +91,11 @@ $( function(){ $('.searchModal').modalSearch();})
 		<div class="col-sm-2">
 			<div class="form-group @if(baseForm.error("fecha_inicio") != null) {has-error}">
 				<label for="fecha_factura" class="control-label">Fecha Inicio</label>
-				@inputText(baseForm("fecha_inicio"),'class -> "form-control date", 'id -> "fecha_inicio")
+				@if(formularioEditar){
+					@inputText(baseForm("fecha_inicio"),'class -> "form-control date", 'id -> "fecha_inicio")
+				}else{
+					@inputText(baseForm("fecha_inicio"),'class -> "form-control date", 'id -> "fecha_inicio",'readOnly -> "readOnly")
+				}
 				@baseForm("fecha_inicio").error.map{ error =>
 					<div class="text-error">@error.message</div>
 				}
@@ -79,7 +105,11 @@ $( function(){ $('.searchModal').modalSearch();})
 		<div class="col-sm-2">
 			<div class="form-group @if(baseForm.error("fecha_fin") != null) {has-error}">
 				<label for="fecha_factura" class="control-label">Fecha Fin</label>
-				@inputText(baseForm("fecha_fin"),'class -> "form-control date", 'id -> "fecha_fin")
+				@if(formularioEditar){
+					@inputText(baseForm("fecha_fin"),'class -> "form-control date", 'id -> "fecha_fin")
+				}else{
+
+				}
 				@baseForm("fecha_fin").error.map{ error =>
 					<div class="text-error">@error.message</div>
 				}
