--- a/app/views/recupero/informes/informeGeneral.scala.html
+++ b/app/views/recupero/informes/informeGeneral.scala.html
@@ -1,6 +1,6 @@
 @(buscador: utils.pagination.Pagination[models.recupero.InformeTotal], formBuscador: DynamicForm)
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 @import utils._
 
 @scripts = {
@@ -9,7 +9,7 @@
 
 
 @views.html.recupero.mainRecupero(title = "Informe deudas", scripts) {
-    
+
 <div class="page-header">
 	<div class="row">
 		<div class="col-sm-9">
@@ -42,27 +42,27 @@ $( function() {
 }
 @if(flash.containsKey("error")) {
 	<div class="alert alert-danger"><i class="glyphicon glyphicon-remove-sign"></i> @flash.get("error")</div>
-} 
+}
 
 
     <form action="" method="GET" id="filtroInforme">
 		<div class="row seccion">
-			
-			
+
+
 		<div class="col-sm-4">
 			<label class="control-label">Cliente
-				<div class="input-group">	
+				<div class="input-group">
 					@inputText(formBuscador("cliente_nombre"), 'name -> "", 'autofocus -> "autofocus", 'class -> "form-control", 'id -> "cliente")
 					@inputText(formBuscador("cliente_id"), 'hidden -> "hidden", 'id -> "cliente_id")
 					<span class="input-group-addon">
 						<a href="#" class="searchModal"
-									id="searchCliente" 
-									data-title="Selección de cliente" 
-									data-url="@controllers.compras.routes.ClientesController.modalBuscar()" 
-									data-height="650" 
-									data-width="700" 
-									data-listen="modal.seleccion.cliente.simple" 
-									data-label="#cliente" 
+									id="searchCliente"
+									data-title="Selección de cliente"
+									data-url="@controllers.compras.routes.ClientesController.modalBuscar()"
+									data-height="650"
+									data-width="700"
+									data-listen="modal.seleccion.cliente.simple"
+									data-label="#cliente"
 									data-field="#cliente_id">
 							<i class="glyphicon glyphicon-search"></i>
 						</a>
@@ -75,62 +75,62 @@ $( function() {
 				<label class="control-label">Tipo de cliente</label>
 				@select(formBuscador("cliente_tipo_id"), ClienteTipo.find.all().map { p => p.id.toString -> p.nombre}, 'class -> "form-control select", '_default -> "Seleccionar")
 			</div>
-		</div>	
+		</div>
 		<div class="col-sm-2">
-			<label for="inputPeriodo" class="control-label">Periodo</label> 
+			<label for="inputPeriodo" class="control-label">Periodo</label>
 			<div class="input-group">
-				
+
 				@inputText(formBuscador("periodo"),'class -> "form-control",'id -> "periodo")
 				@inputText(formBuscador("periodo_id"),'hidden -> "hidden",'id -> "periodo_id")
 				<span class="input-group-addon">
 				<a href="#" class="searchModal"
-							id="searchPeriodo" 
-							data-title="Selección de Periodo" 
-							data-url="@controllers.contabilidad.routes.PeriodosController.modalBuscar()" 
-							data-height="650" 
-							data-width="700" 
-							data-listen="modal.seleccion.periodo.simple" 
-							data-label="#periodo" 
+							id="searchPeriodo"
+							data-title="Selección de Periodo"
+							data-url="@controllers.contabilidad.routes.PeriodosController.modalBuscar()"
+							data-height="650"
+							data-width="700"
+							data-listen="modal.seleccion.periodo.simple"
+							data-label="#periodo"
 							data-field="#periodo_id">
 					<i class="glyphicon glyphicon-search"></i>
 				</a>
 				</span>
 			</div>
 		</div>
-			
-			
+
+
 		<div class="col-sm-2">
 			<label class="control-label">Expediente
 				<div class="input-group">
 					@inputText(formBuscador("expediente.nombre"), 'name -> "", 'class -> "form-control", 'id -> "expediente")
 					@inputText(formBuscador("expediente_id"), 'hidden -> "hidden", 'id -> "expediente_id")
-					
+
 					<span class="input-group-addon">
 						<a href="#" class="searchModal"
-									id="searchExpediente" 
-									data-title="Selección de expediente" 
-									data-url="@controllers.expediente.routes.ExpedientesController.modalBuscar()" 
-									data-height="650" 
-									data-width="700" 
-									data-listen="modal.seleccion.expediente.simple" 
-									data-label="#expediente" 
+									id="searchExpediente"
+									data-title="Selección de expediente"
+									data-url="@controllers.expediente.routes.ExpedientesController.modalBuscar()"
+									data-height="650"
+									data-width="700"
+									data-listen="modal.seleccion.expediente.simple"
+									data-label="#expediente"
 									data-field="#expediente_id">
 							<i class="glyphicon glyphicon-search"></i>
 						</a>
 					</span>
 				</div>
 			</label>
-		</div>  
-			
-		
+		</div>
+
+
 	</div>
-	<div class="row">	
-	
-		
-		<div class="col-sm-2">
+	<div class="row">
+
+
+		<!--  <div class="col-sm-2">
 			<label class="control-label">Ejercicio</label>
 				@select(formBuscador("ejercicio"), Ejercicio.getEjercicios().map { p => p.id.toString -> p.nombre}, 'class -> "form-control select", '_default -> "Seleccionar")
-		</div>	
+		</div>-->
 		<div class="col-sm-2 input-group">
 			<label class="control-label">Fecha Factura</label>
 			<div>
@@ -138,7 +138,7 @@ $( function() {
 				@inputText(formBuscador("fecha_factura_hasta"), 'class -> "form-control inputDateMascara", 'id -> "fecha_factura_hasta", 'placeholder -> "Hasta")
 			</div>
 		</div>
-		<div class="col-sm-2">		
+		<div class="col-sm-2">
 			<div class="form-group">
 				<label for="mayor_a">Deuda entre</label>
 				<div class="input-group">
@@ -147,9 +147,9 @@ $( function() {
 		    		@inputText(formBuscador("deuda_menor"), 'class -> "form-control", 'placeholder -> "Menor a")
 				</div>
 			</div>
-		</div>			
-				
-		<div class="col-sm-2">		
+		</div>
+
+		<div class="col-sm-2">
 			<div class="form-group">
 				<label for="pago_ma">Pago entre</label>
 				<div class="input-group">
@@ -158,26 +158,26 @@ $( function() {
 		    		@inputText(formBuscador("pago_menor"), 'class -> "form-control", 'placeholder -> "Menor a")
 				</div>
 			</div>
-		</div>	
+		</div>
 		<div class="col-sm-4">
-			<label for="deposito" class="control-label">Institucion</label> 
+			<label for="deposito" class="control-label">Institucion</label>
 			<div class="input-group">
 				@inputText(formBuscador("deposito.nombre"),'class -> "form-control", 'id -> "deposito_nombre", 'autocomplete -> "off")
 				@inputText(formBuscador("deposito_id"),'hidden -> "hidden", 'id -> "deposito_id")
 				<span class="input-group-addon">
-                	<a href="#" id="searchDeposito" data-title="Selección de Institucion" 
-                	data-url="@controllers.delegacion.routes.DepositosController.modalBuscar()" 
-                	data-height="650" data-width="700" 
-                	data-listen="modal.seleccion.deposito.simple" 
+                	<a href="#" id="searchDeposito" data-title="Selección de Institucion"
+                	data-url="@controllers.delegacion.routes.DepositosController.modalBuscar()"
+                	data-height="650" data-width="700"
+                	data-listen="modal.seleccion.deposito.simple"
                 	data-label="#deposito_nombre" data-field="#deposito_id" /> <i class="glyphicon glyphicon-search"></i></a>
                 </span>
 			</div>
-		</div>					
+		</div>
 	</div>
-	
+
 	<div class="row">
 
-				
+
 		<div class="col-sm-2">
 			<div class="form-group">
 			<label for="nombre" class="control-label">&nbsp;</label>
@@ -190,17 +190,17 @@ $( function() {
 			<a href="@controllers.recupero.routes.RecuperoReportesController.informeGeneral()"  class="form-control btn btn-default">Limpiar</a>
 			</div>
 		</div>
-			
+
 		</div>
     </form>
     @if(buscador.getTotalRowCount == 0) {
-        
+
         <div class="well">
             <em>No se encuentran resultados</em>
         </div>
-        
+
     } else {
-		Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).   
+		Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).
 		<table class="table table-striped table-bordered" id="listaInforme">
 			<thead>
 				<tr>
@@ -223,7 +223,7 @@ $( function() {
 					<td>@DateUtils.formatDate(informe.fecha)</td>
 					<td>@informe.cliente.nombre</td>
 					<td class="totalFactura" data-valor="@informe.totalFactura">@utils.NumberUtils.moneda(informe.totalFactura)</td>
-					<td class="totalPagos" data-valor="@informe.totalPagos">@utils.NumberUtils.moneda(informe.totalPagos)</td>					
+					<td class="totalPagos" data-valor="@informe.totalPagos">@utils.NumberUtils.moneda(informe.totalPagos)</td>
 					<td class="totalDeuda" data-valor="@informe.totalDeuda">@utils.NumberUtils.moneda(informe.totalDeuda)</td>
 				</tr>
 		        }
@@ -241,28 +241,28 @@ $( function() {
 		    @views.html.helpers.paginador(buscador, controllers.recupero.routes.RecuperoReportesController.informeGeneral())
 		</div>
 	}
-	
-	
+
+
 	<script type="text/javascript">
 	$( function() {
 		$('#searchPeriodo, #searchExpediente, #searchCliente').modalSearch();
-		
+
 		var trs = $('#listaInforme tbody tr');
 		sumarFilas(trs);
-		
-		
+
+
 		$('#checkAll').click( function() {
 			sumarFilas($('#listaInforme tbody tr'));
 		});
-		
+
 		$('input[name="check_listado[]"]').click( function() {
 			sumarFilas( $('#listaInforme tbody tr:has(td:eq(0):has(input:checked))') );
 		});
-		
+
 		function sumarFilas(trs) {
 
-			var factura = 0; var pagado = 0; var deuda = 0; 
-			
+			var factura = 0; var pagado = 0; var deuda = 0;
+
 			trs.each( function() {
 				factura += Number($('.totalFactura',this).attr("data-valor"));
 				pagado += Number($('.totalPagos',this).attr("data-valor"));
@@ -273,11 +273,11 @@ $( function() {
 			$("#pagosFooter").html(formatNumberPesos(parseFloat(pagado).toFixed(2)));
 			$("#deudaFooter").html(formatNumberPesos(parseFloat(deuda).toFixed(2)));
 		}
-		
 
-		
+
+
 	});
 	</script>
-	
-	
+
+
 }
