--- a/app/views/recupero/recuperoFactura/tabsRecuperoFactura.scala.html
+++ b/app/views/recupero/recuperoFactura/tabsRecuperoFactura.scala.html
@@ -72,10 +72,10 @@
 								}else{
 									<div class="col-sm-3">
 									</div>
-									@if(Usuario.getUsuarioSesion() == 1){
+									@if(factura.cae == null || factura.cae.isEmpty()){
 									<div class="col-sm-3">
 										<a href="@controllers.recupero.routes.RecuperoFacturasController.cambiarEstado(recuperoFacturaForm.field("id").value.toInt, models.Estado.RECUPERO_FACTURA_CANCELADO)@UriTrack.get("&")" class="btn btn-default">
-											<i class="glyphicon glyphicon-minus-sign"></i> Anular Factura
+											<i class="glyphicon glyphicon-minus-sign"></i> Cancelar Factura
 										</a>
 									</div>
 									}
