--- a/app/views/contabilidad/balance/indexBalance.scala.html
+++ b/app/views/contabilidad/balance/indexBalance.scala.html
@@ -128,7 +128,8 @@
 															"facturas"->"Facturas",
 															"factura_recupero"->"Recupero facturas",
 															"pago_recupero"->"Recupero pagos",
-															"nt_recupero"->"Recupero Notas"), 'class -> "form-control select")
+															"nt_recupero"->"Recupero Notas Credito",
+															"nd_recupero"->"Recupero Notas Debito",), 'class -> "form-control select")
 					</label>
 				</div>
 			</div>
