--- a/app/views/contabilidad/balance/indexBalance.scala.html
+++ b/app/views/contabilidad/balance/indexBalance.scala.html
@@ -129,7 +129,7 @@
 															"factura_recupero"->"Recupero facturas",
 															"pago_recupero"->"Recupero pagos",
 															"nt_recupero"->"Recupero Notas Credito",
-															"nd_recupero"->"Recupero Notas Debito",), 'class -> "form-control select")
+															"nd_recupero"->"Recupero Notas Debito"), 'class -> "form-control select")
 					</label>
 				</div>
 			</div>
