--- a/app/views/recupero/mainRecupero.scala.html
+++ b/app/views/recupero/mainRecupero.scala.html
@@ -35,6 +35,7 @@
 
 				<li class="titulo">Informes</li>
 				<li><a href="@controllers.recupero.routes.RecuperoReportesController.informeGeneral()">Informe General</a></li>
+				<li><a href="@controllers.recupero.routes.RecuperoReportesController.informeResumenFacturacionMensual()">Informe Resumen Facturacion</a></li>
 
 
 			</ul>
