--- a/app/views/dashboard/mainDashboard.scala.html
+++ b/app/views/dashboard/mainDashboard.scala.html
@@ -139,6 +139,7 @@
 				@if(Componente.check("dashboardInformeRecupero")) {
 					<li class="titulo">Informes Recupero</li>
 					<li><a href="@controllers.dashboard.routes.InformesRecuperoController.index()">Informes</a></li>
+					<li><a href="@controllers.recupero.routes.RecuperoReportesController.informeResumenFacturacionMensual()">Informe Resumen Facturacion</a></li>
 				}
 
 				@if(Componente.check("dashboardInformeRecupero")) {
