--- a/app/views/dashboard/informesRecupero/navinformes.scala.html
+++ b/app/views/dashboard/informesRecupero/navinformes.scala.html
@@ -3,8 +3,24 @@
 		<div class="container-fluid">
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
-		      	<li class="dropdown">
-		         	
+
+
+		        <li class="dropdown">
+				  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Facturación <b class="caret"></b></a>
+		          <ul class="dropdown-menu">
+		          	<li><a href="@controllers.recupero.routes.RecuperoReportesController.informeResumenFacturacionMensual()">Facturación Resumen Mensual</a></li>
+					</ul>
+		        </li>
+
+				<li class="dropdown">
+				  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Cobranzas <b class="caret"></b></a>
+		          <ul class="dropdown-menu">
+		          	<li><a href="@controllers.recupero.routes.RecuperoReportesController.informeResumenPagoMensual()">Cobranzas Resumen Mensual</a></li>
+					</ul>
+		        </li>
+
+				<li class="dropdown">
+
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Deudas <b class="caret"></b></a>
 		          <ul class="dropdown-menu">
 		          	<li><a href="@controllers.dashboard.routes.InformesRecuperoController.deudasPorTipoDeCliente(-1)">Deudas Generales</a></li>
@@ -13,12 +29,12 @@
 		            <li><a href="@controllers.dashboard.routes.InformesRecuperoController.deudasPorTipoDeCliente(models.ClienteTipo.OBRAS_SOCIALES)">Deudas Obras Sociales</a></li>
 		            <li><a href="@controllers.dashboard.routes.InformesRecuperoController.deudasPorTipoDeCliente(models.ClienteTipo.SEGUROS)">Deudas Seguros</a></li>
 		            <li><a href="@controllers.dashboard.routes.InformesRecuperoController.deudasPorTipoDeCliente(models.ClienteTipo.ART)">Deudas ART</a></li>
-		            
+
 		          </ul>
 		        </li>
-		       
+
 		      </ul>
-		    </div>  
+		    </div>
 		</div>
 	</nav>
 </div>
