--- a/app/views/dashboard/informesRecupero/tablaDetalleDeudas.scala.html
+++ b/app/views/dashboard/informesRecupero/tablaDetalleDeudas.scala.html
@@ -4,7 +4,7 @@
 </thead>
 <thead>
 	<th>FINANCIADOR-PACIENTE</th>
-	<th>IMPORTE</th>
-	<th>DEBITOS</th>
+	<th>FACTURADO</th>
+	<th>PAGOS</th>
 	<th>A COBRAR</th>
 </thead>
