--- a/app/views/dashboard/informesRecupero/deudasPorTipoDeCliente.scala.html
+++ b/app/views/dashboard/informesRecupero/deudasPorTipoDeCliente.scala.html
@@ -57,9 +57,9 @@ deudasPorSeguro:List[com.avaje.ebean.SqlRow]
 
 					 <tr style="background-color:#ffffff;">
 						<td>@s.getString("cliente_nombre")</td>
-						<td>@utils.NumberUtils.moneda(s.getBigDecimal("total_factura"))</td>
-						<td>@utils.NumberUtils.moneda(s.getBigDecimal("total_pago"))</td>
-						<td>@utils.NumberUtils.moneda(s.getBigDecimal("total_deuda"))</td>
+						<!-- <td align="center">@utils.NumberUtils.moneda(s.getBigDecimal("total_factura"),0)</td>
+						<td align="center">@utils.NumberUtils.moneda(s.getBigDecimal("total_pago"),0)</td> -->
+						<td align="center">@utils.NumberUtils.moneda(s.getBigDecimal("total_deuda"),0)</td>
 					</tr>
 
 
@@ -73,9 +73,9 @@ deudasPorSeguro:List[com.avaje.ebean.SqlRow]
 			<tfoot>
 				<tr style="background-color:#dfdfdf;">
 					<td align="right"><b>TOTALES</b></td>
-					<td><b>@utils.NumberUtils.moneda(ptfactura)</b></td>
-					<td><b>@utils.NumberUtils.moneda(ptpago)</b></td>
-					<td><b>@utils.NumberUtils.moneda(ptdeuda)</b></td>
+					<!--<td align="center"><b>@utils.NumberUtils.moneda(ptfactura,0)</b></td>
+					<td align="center"><b>@utils.NumberUtils.moneda(ptpago,0)</b></td>-->
+					<td align="center"><b>@utils.NumberUtils.moneda(ptdeuda,0)</b></td>
 				</tr>
 			</tfoot>
 		</table>
@@ -100,9 +100,9 @@ deudasPorSeguro:List[com.avaje.ebean.SqlRow]
 
 					 <tr style="background-color:#ffffff;">
 						<td>@s.getString("cliente_nombre")</td>
-						<td>@utils.NumberUtils.moneda(s.getBigDecimal("total_factura"))</td>
-						<td>@utils.NumberUtils.moneda(s.getBigDecimal("total_pago"))</td>
-						<td>@utils.NumberUtils.moneda(s.getBigDecimal("total_deuda"))</td>
+						<!--<td align="center">@utils.NumberUtils.moneda(s.getBigDecimal("total_factura"),0)</td>
+						<td align="center">@utils.NumberUtils.moneda(s.getBigDecimal("total_pago"),0)</td>-->
+						<td align="center">@utils.NumberUtils.moneda(s.getBigDecimal("total_deuda"),0)</td>
 					</tr>
 
 
@@ -116,9 +116,9 @@ deudasPorSeguro:List[com.avaje.ebean.SqlRow]
 			<tfoot>
 				<tr style="background-color:#dfdfdf;">
 					<td align="right"><b>TOTALES</b></td>
-					<td><b>@utils.NumberUtils.moneda(ptfactura)</b></td>
-					<td><b>@utils.NumberUtils.moneda(ptpago)</b></td>
-					<td><b>@utils.NumberUtils.moneda(ptdeuda)</b></td>
+					<!--<td align="center"><b>@utils.NumberUtils.moneda(ptfactura,0)</b></td>
+					<td align="center"><b>@utils.NumberUtils.moneda(ptpago,0)</b></td>-->
+					<td align="center"><b>@utils.NumberUtils.moneda(ptdeuda,0)</b></td>
 				</tr>
 			</tfoot>
 		</table>
@@ -143,9 +143,9 @@ deudasPorSeguro:List[com.avaje.ebean.SqlRow]
 
 					 <tr style="background-color:#ffffff;">
 						<td>@s.getString("cliente_nombre")</td>
-						<td>@utils.NumberUtils.moneda(s.getBigDecimal("total_factura"))</td>
-						<td>@utils.NumberUtils.moneda(s.getBigDecimal("total_pago"))</td>
-						<td>@utils.NumberUtils.moneda(s.getBigDecimal("total_deuda"))</td>
+						<!--<td align="center">@utils.NumberUtils.moneda(s.getBigDecimal("total_factura"),0)</td>
+						<td align="center">@utils.NumberUtils.moneda(s.getBigDecimal("total_pago"),0)</td>-->
+						<td align="center">@utils.NumberUtils.moneda(s.getBigDecimal("total_deuda"),0)</td>
 					</tr>
 
 
@@ -159,9 +159,9 @@ deudasPorSeguro:List[com.avaje.ebean.SqlRow]
 			<tfoot>
 				<tr style="background-color:#dfdfdf;">
 					<td align="right"><b>TOTALES</b></td>
-					<td><b>@utils.NumberUtils.moneda(ptfactura)</b></td>
-					<td><b>@utils.NumberUtils.moneda(ptpago)</b></td>
-					<td><b>@utils.NumberUtils.moneda(ptdeuda)</b></td>
+					<!--<td align="center"><b>@utils.NumberUtils.moneda(ptfactura,0)</b></td>
+					<td align="center"><b>@utils.NumberUtils.moneda(ptpago,0)</b></td>-->
+					<td align="center"><b>@utils.NumberUtils.moneda(ptdeuda,0)</b></td>
 				</tr>
 			</tfoot>
 		</table>
@@ -186,9 +186,9 @@ deudasPorSeguro:List[com.avaje.ebean.SqlRow]
 
 					 <tr style="background-color:#ffffff;">
 						<td>@s.getString("cliente_nombre")</td>
-						<td>@utils.NumberUtils.moneda(s.getBigDecimal("total_factura"))</td>
-						<td>@utils.NumberUtils.moneda(s.getBigDecimal("total_pago"))</td>
-						<td>@utils.NumberUtils.moneda(s.getBigDecimal("total_deuda"))</td>
+						<!--<td align="center">@utils.NumberUtils.moneda(s.getBigDecimal("total_factura"),0)</td>
+						<td align="center">@utils.NumberUtils.moneda(s.getBigDecimal("total_pago"),0)</td>-->
+						<td align="center">@utils.NumberUtils.moneda(s.getBigDecimal("total_deuda"),0)</td>
 					</tr>
 
 
@@ -202,9 +202,9 @@ deudasPorSeguro:List[com.avaje.ebean.SqlRow]
 			<tfoot>
 				<tr style="background-color:#dfdfdf;">
 					<td align="right"><b>TOTALES</b></td>
-					<td><b>@utils.NumberUtils.moneda(ptfactura)</b></td>
-					<td><b>@utils.NumberUtils.moneda(ptpago)</b></td>
-					<td><b>@utils.NumberUtils.moneda(ptdeuda)</b></td>
+					<!--<td align="center"><b>@utils.NumberUtils.moneda(ptfactura,0)</b></td>
+					<td align="center"><b>@utils.NumberUtils.moneda(ptpago,0)</b></td>-->
+					<td align="center"><b>@utils.NumberUtils.moneda(ptdeuda,0)</b></td>
 				</tr>
 			</tfoot>
 		</table>
@@ -230,9 +230,9 @@ deudasPorSeguro:List[com.avaje.ebean.SqlRow]
 
 					 <tr style="background-color:#ffffff;">
 						<td>@s.getString("cliente_nombre")</td>
-						<td>@utils.NumberUtils.moneda(s.getBigDecimal("total_factura"))</td>
-						<td>@utils.NumberUtils.moneda(s.getBigDecimal("total_pago"))</td>
-						<td>@utils.NumberUtils.moneda(s.getBigDecimal("total_deuda"))</td>
+						<!--<td align="center">@utils.NumberUtils.moneda(s.getBigDecimal("total_factura"),0)</td>
+						<td align="center">@utils.NumberUtils.moneda(s.getBigDecimal("total_pago"),0)</td>-->
+						<td align="center">@utils.NumberUtils.moneda(s.getBigDecimal("total_deuda"),0)</td>
 					</tr>
 
 
@@ -246,9 +246,9 @@ deudasPorSeguro:List[com.avaje.ebean.SqlRow]
 			<tfoot>
 				<tr style="background-color:#dfdfdf;">
 					<td align="right"><b>TOTALES</b></td>
-					<td><b>@utils.NumberUtils.moneda(ptfactura)</b></td>
-					<td><b>@utils.NumberUtils.moneda(ptpago)</b></td>
-					<td><b>@utils.NumberUtils.moneda(ptdeuda)</b></td>
+					<!--<td align="center"><b>@utils.NumberUtils.moneda(ptfactura,0)</b></td>
+					<td align="center"><b>@utils.NumberUtils.moneda(ptpago,0)</b></td>-->
+					<td align="center"><b>@utils.NumberUtils.moneda(ptdeuda,0)</b></td>
 				</tr>
 			</tfoot>
 		</table>
