--- a/app/views/dashboard/informesRecupero/tablaDetalleDeudas.scala.html
+++ b/app/views/dashboard/informesRecupero/tablaDetalleDeudas.scala.html
@@ -4,7 +4,7 @@
 </thead>
 <thead>
 	<th>FINANCIADOR-PACIENTE</th>
-	<th>FACTURADO</th>
-	<th>PAGOS</th>
-	<th>A COBRAR</th>
+	<!-- <th style="text-align: center;" align="center">FACTURADO</th>
+	<th style="text-align: center;" align="center">PAGOS</th> -->
+	<th style="text-align: center;"align="center">A COBRAR</th>
 </thead>
