--- a/app/views/rrhh/agenteAsistenciaLicencia/indexLicenciaNovedadesLiquidacion.scala.html
+++ b/app/views/rrhh/agenteAsistenciaLicencia/indexLicenciaNovedadesLiquidacion.scala.html
@@ -226,6 +226,16 @@
 					</label>
 				</div>
 			</div> -->
+
+		</div>
+		<div class="row" >
+			<div class="col-sm-2 input-group">
+				<label class="control-label">Fecha Novedad</label>
+				<div>
+					@inputText(formBuscador("fecha_novedad_desde"), 'class -> "form-control inputDateMascara", 'id -> "fecha_novedad_desde", 'placeholder -> "Desde")
+					@inputText(formBuscador("fecha_novedad_hasta"), 'class -> "form-control inputDateMascara", 'id -> "fecha_novedad_hasta", 'placeholder -> "Hasta")
+				</div>
+			</div>
 		</div>
 		<div class="row" >
 
