--- a/app/views/dashboard/informesRecupero/navinformes.scala.html
+++ b/app/views/dashboard/informesRecupero/navinformes.scala.html
@@ -32,6 +32,12 @@
 
 		          </ul>
 		        </li>
+		        <li class="dropdown">
+				  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Deudas por Antiguedad <b class="caret"></b></a>
+		          <ul class="dropdown-menu">
+		          	<li><a href="@controllers.recupero.routes.RecuperoReportesController.getDeudaPorAntiguedad()">Deudas por Antiguedad</a></li>
+					</ul>
+		        </li>
 
 		      </ul>
 		    </div>
