--- a/app/views/recupero/informes/informeResumenDeudaAntiguedad.scala.html
+++ b/app/views/recupero/informes/informeResumenDeudaAntiguedad.scala.html
@@ -66,7 +66,13 @@
 				@if(sx.getString("tipo_cliente").compareTo("Compañías de seguro") ==0){
 					<tr data-id="">
 						<td align="center">@split(sx.getString("fecha"))</td>
-						<td align="center">@utils.NumberUtils.moneda(sx.getBigDecimal("total_deuda"),0)</td>
+
+						<td align="center">
+							<a style="cursor: pointer;" data-url="@controllers.recupero.routes.RecuperoReportesController.getDetalleDeudaPorAntiguedad("""Compañías de seguro""",sx.getString("""fecha"""))"
+								class="abrirModal" >
+								@utils.NumberUtils.moneda(sx.getBigDecimal("total_deuda"),0)
+							</a>
+						</td>
 					</tr>
 				}
 			}
@@ -82,7 +88,12 @@
 				@if(sx.getString("tipo_cliente").compareTo("ART") ==0){
 					<tr data-id="">
 						<td align="center">@split(sx.getString("fecha"))</td>
-						<td align="center">@utils.NumberUtils.moneda(sx.getBigDecimal("total_deuda"),0)</td>
+						<td align="center">
+							<a style="cursor: pointer;" data-url="@controllers.recupero.routes.RecuperoReportesController.getDetalleDeudaPorAntiguedad("""ART""",sx.getString("""fecha"""))"
+								class="abrirModal" >
+								@utils.NumberUtils.moneda(sx.getBigDecimal("total_deuda"),0)
+							</a>
+						</td>
 					</tr>
 				}
 			}
@@ -98,7 +109,12 @@
 				@if(sx.getString("tipo_cliente").compareTo("Otros") ==0){
 					<tr data-id="">
 						<td align="center">@split(sx.getString("fecha"))</td>
-						<td align="center">@utils.NumberUtils.moneda(sx.getBigDecimal("total_deuda"),0)</td>
+						<td align="center">
+							<a style="cursor: pointer;" data-url="@controllers.recupero.routes.RecuperoReportesController.getDetalleDeudaPorAntiguedad("""Otros""",sx.getString("""fecha"""))"
+								class="abrirModal" >
+								@utils.NumberUtils.moneda(sx.getBigDecimal("total_deuda"),0)
+							</a>
+						</td>
 					</tr>
 				}
 			}
