--- a/app/views/recupero/mainRecupero.scala.html
+++ b/app/views/recupero/mainRecupero.scala.html
@@ -29,7 +29,7 @@
 				}
 
 				@if(Componente.check("recuperoPago")) {
-					<li><a href="@controllers.recupero.routes.RecuperoPagosController.index()">Pago</a></li>
+					<li><a href="@controllers.recupero.routes.RecuperoPagosController.index()">Movimientos</a></li>
 				}
 
 
