--- a/app/views/recupero/recuperoPago/indexRecuperoPago.scala.html
+++ b/app/views/recupero/recuperoPago/indexRecuperoPago.scala.html
@@ -20,11 +20,11 @@
 
 }
 
-@views.html.recupero.mainRecupero("Lista de Pagos", scripts) {
+@views.html.recupero.mainRecupero("Lista de Movimientos", scripts) {
 	<div class="page-header">
 		<div class="row">
 			<div class="col-sm-7">
-				<h1>Lista de Pagos</h1>
+				<h1>Lista de  Movimientos</h1>
 			</div>
 
 			<div class="col-sm-5">
@@ -210,7 +210,7 @@
 	@if(buscador.getTotalRowCount == 0) {
 
         <div class="well">
-            <em>No se encuentran Pagos</em>
+            <em>No se encuentran Movimientos</em>
         </div>
 
     } else {
