--- a/app/views/recupero/recuperoPago/editarRecuperoPago.scala.html
+++ b/app/views/recupero/recuperoPago/editarRecuperoPago.scala.html
@@ -11,7 +11,7 @@
 	<div class="page-header">
 		<div class="row">
 			<div class="col-sm-7">
-				<h1>Editar pago</h1>
+				<h1>Editar  Movimientos</h1>
 			</div>
 
 			<div class="col-sm-5">
@@ -22,10 +22,10 @@
 				    <span class="caret"></span>
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-				    
+
 				  </ul>
 				</div>
-				
+
 				<div class="dropdown pull-right btn-header">
 				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
 				 	<i class="glyphicon glyphicon-cog"></i>
@@ -33,42 +33,42 @@
 				    <span class="caret"></span>
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-				  	
+
 				  </ul>
 				</div>
-					
+
 				<!-- <div class="pull-right btn-header">
 					<a href="@controllers.recupero.routes.RecuperoPagosController.crear()"  class="btn btn-default"><i class="glyphicon glyphicon-plus-sign"></i> Nuevo Pago</a>
 				</div> -->
 			</div>
-			
-			
+
+
 		</div>
 	</div>
-	
+
 	@if(flash.containsKey("error")) {
 		<div class="alert alert-danger">
 			@flash.get("error")
 		</div>
 	}
-	
+
 
 	@helper.form(action = controllers.recupero.routes.RecuperoPagosController.actualizar(recuperoPago.id)) {
-	
-	
+
+
 		@inputText(recuperoPagoForm("id"), 'hidden -> "hidden")
 		@views.html.recupero.recuperoPago.formRecuperoPago(recuperoPagoForm,recuperoPago)
-		
-		 @views.html.recupero.recuperoPago.tabsRecuperoPago(true, recuperoPagoForm)	
-		
-		
-		
-		
+
+		 @views.html.recupero.recuperoPago.tabsRecuperoPago(true, recuperoPagoForm)
+
+
+
+
 		<h4>Estado actual: 	<b>@recuperoPago.estado.nombre</b></h4>
-		<div class="row margin-bottom-25">	
-			
+		<div class="row margin-bottom-25">
+
 		</div>
-		
+
 	}
 
 }
@@ -79,7 +79,7 @@
 <script>
 
 $( function() {
-	
+
 	$( function() {
 		$('.datosPago').hide();
 		if('@recuperoPago.tipoPago' == '@models.recupero.RecuperoPago.PAGO_CHEQUE') {
@@ -89,9 +89,9 @@ $( function() {
 			})
 		}
 	});
-	
 
-	
+
+
 });
 
 </script>
